# simulate

./: Cargo.toml  rustfmt.toml
src/: ggez.rs  lib.rs  perf.rs  stats.rs
src/ggez/: app.rs  render.rs
src/ggez/render/: chart.rs  icicle_chart.rs  layout.rs  line_chart.rs  plotters.rs  simulation.rs
src/ggez/render/layout/: flex.rs
src/ggez/render/plotters/: icicle_chart.rs  line_chart.rs
