[package]
name = "simulate"
version = "0.1.0"
authors = ["David Emmel <dgemmel2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
ggez_app = ["ggez", "plotters", "nalgebra"]
perf = ["flame"]

[dependencies]
flame = { version = "0.2.2", optional = true }
ggez = { version = "0.5.1", optional = true }
nalgebra = { version = "0.24.1", optional = true }
plotters = { version = "0.2.15", features = ["line_series"], optional = true }
indexmap = "1.6.1"
